@@ -4,6 +4,7 @@
 * Add - Stripe Link: Add beta headers for Stripe server requests
 * Add - Stripe Link payment method option in admin
 * Add - Stripe Link payment method on checkout form
+* Add - Stripe Link payment method on blocks checkout form
 
 = 6.4.3 - 2022-06-30 =
 * Fix - Replace unnecessary throws with empty string when keys are invalid.
